--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+    "github.copilot.chat.codeGeneration.instructions": [
+        {
+            "file": "./.vscode/daisyui.md"
+        }
+    ],
     "prettier.documentSelectors": ["**/*.astro"],
     "[astro]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
