--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@astrojs/sitemap": "^3.3.0",
         "@iconify-json/material-symbols": "^1.2.17",
+        "@iconify-json/mdi": "^1.2.3",
         "@iconify-json/simple-icons": "^1.2.31",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.1.3",
@@ -19,8 +20,8 @@
         "astro-i18n-aut": "^0.7.3",
         "astro-icon": "^1.1.5",
         "astro-seo": "^0.8.4",
+        "daisyui": "^5.0.18",
         "deepmerge": "^4.3.1",
-        "preline": "^3.0.1",
         "rehype-external-links": "^3.0.0",
         "tailwindcss": "^4.1.3"
     },
