--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "@iconify-json/simple-icons": "^1.2.31",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/vite": "^4.1.3",
-        "astro": "^5.6.1",
+        "astro": "5.7.4",
         "astro-i18n-aut": "^0.7.3",
         "astro-icon": "^1.1.5",
         "astro-seo": "^0.8.4",
